[gd_scene load_steps=5 format=2]

[ext_resource path="res://views/page_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://sound/hover_crumple.tscn" type="PackedScene" id=2]
[ext_resource path="res://main_theme.tres" type="Theme" id=3]
[ext_resource path="res://views/start_daily.gd" type="Script" id=4]

[node name="start_daily" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_background" parent="." instance=ExtResource( 1 )]

[node name="hover_crumple" parent="." instance=ExtResource( 2 )]

[node name="Container" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 90.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
margin_right = 760.0
margin_bottom = 257.0
rect_pivot_offset = Vector2( -323.738, -69.2478 )
size_flags_horizontal = 3

[node name="ready" type="Label" parent="Container/VBoxContainer"]
margin_right = 760.0
margin_bottom = 36.0
text = "DLY_READY"
align = 1

[node name="ready_bb" type="RichTextLabel" parent="Container/VBoxContainer"]
margin_top = 40.0
margin_right = 760.0
margin_bottom = 64.0
bbcode_enabled = true
bbcode_text = "DLY_READY_BB"
text = "DLY_READY_BB"
fit_content_height = true

[node name="play_daily" type="Button" parent="Container/VBoxContainer"]
margin_top = 68.0
margin_right = 760.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "G_TODAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Container/VBoxContainer"]
margin_top = 147.0
margin_right = 760.0
margin_bottom = 197.0
rect_min_size = Vector2( 0, 50 )

[node name="no_tutorial" type="RichTextLabel" parent="Container/VBoxContainer"]
margin_top = 201.0
margin_right = 760.0
margin_bottom = 225.0
bbcode_enabled = true
bbcode_text = "DLY_NO_TUT"
text = "DLY_NO_TUT"
fit_content_height = true

[node name="general_text" type="RichTextLabel" parent="Container/VBoxContainer"]
margin_top = 229.0
margin_right = 760.0
margin_bottom = 253.0
bbcode_enabled = true
bbcode_text = "DLY_RATE_GAME"
text = "DLY_RATE_GAME"
fit_content_height = true

[node name="past_daily_mobile" type="VBoxContainer" parent="Container/VBoxContainer"]
visible = false
margin_top = 325.0
margin_right = 760.0
margin_bottom = 325.0

[node name="past_daily_desktop" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_top = 257.0
margin_right = 760.0
margin_bottom = 257.0

[connection signal="focus_entered" from="Container/VBoxContainer/play_daily" to="hover_crumple" method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Container/VBoxContainer/play_daily" to="hover_crumple" method="_on_mouse_entered"]
[connection signal="pressed" from="Container/VBoxContainer/play_daily" to="." method="_on_play_daily_pressed"]
[connection signal="meta_clicked" from="Container/VBoxContainer/no_tutorial" to="." method="_on_RichTextLabel2_meta_clicked"]
[connection signal="meta_clicked" from="Container/VBoxContainer/general_text" to="." method="_on_RichTextLabel2_meta_clicked"]
